Update web page title (#97)

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>AimDE: Aim Development Environment</title>
+    <title>Aim Development Environment</title>
     <meta name="description" content="Version control and collaboration hub for AI teams">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
